kubernetes/apps/argus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argus
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: argus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argus
    spec:
      securityContext:
        fsGroup: 911
        runAsGroup: 911
        runAsNonRoot: true
        runAsUser: 911
      containers:
        - name: argus
          image: docker.io/releaseargus/argus:0.39.0
          imagePullPolicy: IfNotPresent
          command:
            - /usr/bin/argus
          args:
            - -config.file=/app/config.yml
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/v1/healthcheck
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/healthcheck
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 250m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: config
              mountPath: /app/config.yml
              subPath: config.yml
              readOnly: true
            - name: data
              mountPath: /app/data
      volumes:
        - name: config
          configMap:
            name: argus-config
        - name: data
          persistentVolumeClaim:
            claimName: argus-data
