kubernetes/apps/argus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argus
spec:
  selector:
    app.kubernetes.io/name: argus
  ports:
    - name: http
      port: 8080
      targetPort: http
